# bare-exif

./: CMakeLists.txt  README.md  binding.c  index.js  package.json  test.js  util.js
.github/workflows/: integrate.yml  prebuild.yml  publish.yml  test.yml
cmake/ports/libexif/: port.cmake
cmake/ports/libexif/patches/: 01-intptr.patch
